--- a/.proxyrc.json
+++ b/.proxyrc.json
@@ -6,5 +6,14 @@
 			"replacement" : "//localhost:9090/svc/",
 			"disabled" : false
 		}
+	],
+	"plugins" : [
+		"cookie-replacer"
+	],
+	"cookie-replacer" : [
+		{
+			"pattern" : "test",
+			"replacement" : "_test"
+		}
 	]
 }
