--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
 		"strict": 0,
 		"no-use-before-define": 0,
 		"semi": 2,
-		"no-unused-vars" : 2
+		"no-unused-vars" : 2,
+		"no-undef" : 2
 	}
 }
