--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,14 @@
 {
-	"env": {
-		"node": true
-	},
-	"globals": {},
-	"rules": {
-		"strict": 0,
-		"no-use-before-define": 0,
-		"semi": 2,
-		"no-unused-vars" : 2,
-		"no-undef" : 2
-	}
+    "env": {
+        "node": true
+    },
+    "globals": {},
+    "rules": {
+        "strict": 0,
+        "no-use-before-define": 0,
+        "semi": 2,
+        "no-unused-vars": 2,
+        "no-undef": 2,
+        "no-console": 0
+    }
 }
