--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "url-replace",
-  "version": "0.0.2",
-  "description": "Node proxy for redirecting selected http calls to different hosts.",
+  "name": "pro-xy",
+  "version": "0.1.0",
+  "description": "Pluggable node proxy",
   "main": "proxy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
   "bin": {
-    "url-replace": "./bin/url-replace.js"
+    "pro-xy": "./bin/pro-xy"
   },
-  "repository": "https://github.com/zboro/url-replace.git",
+  "repository": "https://github.com/adros/pro-xy.git",
   "author": "zboron.lukas@gmail.com",
   "dependencies": {
-    "http-proxy": "^1.13.2"
+    "http-proxy": "^1.13.2",
+    "lodash": "^4.16.6",
+    "log4js": "^0.6.38"
   }
 }
