--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "bin": {
     "pro-xy": "./bin/pro-xy"
   },
+  "engines": {
+    "node": ">=6"
+  },
   "repository": "https://github.com/adros/pro-xy.git",
   "author": "zboron.lukas@gmail.com",
   "dependencies": {
     "bluebird": "^3.4.6",
     "http-proxy": "^1.13.2",
     "lodash": "^4.16.6",
-    "log4js": "^0.6.38"
+    "log4js": "^0.6.38",
+    "semver": "^5.3.0"
   }
 }
